# Ross

./: Cargo.toml  Dev note.md  README.md
.github/: Logo V1.afdesign  Logo V2.afdesign
.github/workflows/: release.yaml
src/: cli.rs  config.rs  main.rs
src/commands/: add.rs  bob.rs  hello.rs  init.rs  mod.rs  tidy.rs
src/commands/config/: mod.rs  path.rs
src/commands/config/global/: mod.rs  path.rs
src/commands/config/local/: mod.rs
src/commands/file/: mod.rs
src/handlers/: cli_handler.rs  config_handler.rs  dir_handler.rs  file_handler.rs  global_config_handler.rs  local_config_handler.rs  mod.rs  output_handler.rs
src/languages/: mod.rs
src/languages/java/: mod.rs  settings.rs
src/languages/java/schemes/: mod.rs  v1.rs
